--- a/OneDrive/Desktop/web_design/portfolio/CSS/styles.css
+++ b/OneDrive/Desktop/web_design/portfolio/CSS/styles.css
@@ -2,7 +2,7 @@ body{
     font-family: 'poppions','sans-serif';
 }
 .banner{
-    background-image: url(/portfolio/images/joanna-kosinska-9gfGDbxuqrU-unsplash.jpg);
+    background-image: url(../images/joanna-kosinska-9gfGDbxuqrU-unsplash.jpg);
    background-size: cover;
    background-repeat: no-repeat;
     padding: 200px 0 ;
